--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <title>To Do List</title>
   </head>
   <body>
+    <header>
+      <h1>Srdjan's To Do List</h1>
+    </header>
+    <form>
+      <input type="text" class="todo-input" />
+      <button class="todo-button"></button>
+      <i class="icon"></i>
+    </form>
+    <div class="todo-container">
+      <ul class="todo-list"></ul>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
