body styles updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=T, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins:ital,wght@1,300&display=swap"
       rel="stylesheet"
@@ -15,7 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>To Do List</title>
   </head>
   <body>
@@ -24,8 +23,9 @@
     </header>
     <form>
       <input type="text" class="todo-input" />
-      <button class="todo-button"></button>
-      <i class="icon"></i>
+      <button class="todo-button" type="submit">
+        <i class="fa-solid fa-circle-plus"></i>
+      </button>
     </form>
     <div class="todo-container">
       <ul class="todo-list"></ul>
