--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <button class="todo-button" type="submit">
         <i class="fa-solid fa-circle-plus"></i>
       </button>
+      <div class="select"></div>
+      <select name="todos" class="filter-todo">
+        <option value="all">All</option>
+        <option value="all">Done</option>
+        <option value="all">Not done</option>
+      </select>
     </form>
     <div class="todo-container">
       <ul class="todo-list"></ul>
