filterList function added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div class="select"></div>
       <select name="todos" class="filter-todo">
         <option value="all">All</option>
-        <option value="all">Done</option>
-        <option value="all">Not done</option>
+        <option value="done">Done</option>
+        <option value="not-done">Not done</option>
       </select>
     </form>
     <div class="todo-container">
